[perf] 10月17日 中午：crawler.py的爬虫API编写

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,23 @@
 </head>
 <body>
     <div id="bar" style="width:1000px; height:600px;"></div>
+    <div id="table-container">
+        <table id="dynamic-table">
+            <thead>
+                <tr>
+                    <th>赛事编号</th>
+                    <th>联赛</th>
+                    <th>主队VS客队</th>
+                    <th>比赛开始时间</th>
+                    <th>固定奖金分析</th>
+                </tr>
+            </thead>
+        <tbody>
+          <!-- 数据将在此处动态添加 -->
+        </tbody>
+      </table>
+    </div>
+
     <script>
         $(
             function () {
