--- a/templates/base.html
+++ b/templates/base.html
@@ -7,40 +7,34 @@
     <script type="text/javascript" src="{{ url_for('static', filename='js/echarts.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/tabler.min.css') }}">
     {% block head %}{% endblock %}
 </head>
-<body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-        <a class="navbar-brand" href="#">Savmon</a>
-        <form class="form-search">
-            <input type="text" class="input-medium search-query">
-            <button type="submit" class="btn">Search</button>
-        </form>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">登录</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">注册</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">仓库</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">预训练转换</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled">实时转换</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled">Disabled</a>
-                </li>
-            </ul>
+<body style="background-color: #f4f6fa">
+<div class="container-xl">
+    <div class="row">
+        <div class="col-md-2 text-center">
+            <h4>Data</h4>
+        </div>
+        <div class="col-md-2 text-center">
+            <h4>Forecast</h4>
+        </div>
+        <div class="col-md-2 text-center">
+            <h4>Decision</h4>
+        </div>
+        <div class="col-md-2 text-center">
+            <h4>Record</h4>
+        </div>
+        <div class="col-md-2 text-center">
+            <h4>Replay</h4>
+        </div>
+        <div class="col-md-2 text-center">
+            <h4>Crawler</h4>
         </div>
     </div>
-</nav>
-{% block body %}{% endblock %}
+</div>
+<div class="container">
+    {% block body %}{% endblock %}
+</div>
 </body>
 </html>
