--- a/templates/forecast.html
+++ b/templates/forecast.html
@@ -8,25 +8,29 @@
 <!--    <div id="bar" style="width:1000px; height:600px;"></div>-->
 <div class="row row-deck row-cards">
     <div class="col-md-3 rounded"style="height:300px;">
-        <div class="card">
+        <div class="card text-center">
+            <p>胜平负基础奖金</p>
             <div class="card-body" id="simplePie">
             </div>
         </div>
     </div>
     <div class="col-md-3 rounded" style="height:300px;">
-        <div class="card">
+        <div class="card text-center">
+            <p>让胜平负基础奖金</p>
             <div class="card-body" id="rangPie">
             </div>
         </div>
     </div>
     <div class="col-md-3 rounded" style="height:300px;">
-        <div class="card">
+        <div class="card text-center">
+            <p>胜平负盘口变化</p>
             <div class="card-body" id="simpleChangePie">
             </div>
         </div>
     </div>
     <div class="col-md-3 rounded" style="height:300px;">
-        <div class="card">
+        <div class="card text-center">
+            <p>让胜平负盘口变化</p>
             <div class="card-body" id="rangChangePie">
             </div>
         </div>
@@ -52,7 +56,6 @@
                 $.ajax({
                     type: "GET",
                     url: "http://127.0.0.1:5000/forecast/simplePie",
-                    data: {matchId: 1021894},
                     dataType: 'json',
                     success: function (result) {
                         simplePie.setOption(result);
@@ -63,7 +66,6 @@
                 $.ajax({
                     type: "GET",
                     url: "http://127.0.0.1:5000/forecast/rangPie",
-                    data: {matchId: 1021894},
                     dataType: 'json',
                     success: function (result) {
                         rangPie.setOption(result);
@@ -74,7 +76,6 @@
                 $.ajax({
                     type: "GET",
                     url: "http://127.0.0.1:5000/forecast/simpleChangePie",
-                    data: {matchId: 1021894},
                     dataType: 'json',
                     success: function (result) {
                         simpleChangePie.setOption(result);
@@ -85,7 +86,6 @@
                 $.ajax({
                     type: "GET",
                     url: "http://127.0.0.1:5000/forecast/rangChangePie",
-                    data: {matchId: 1021894},
                     dataType: 'json',
                     success: function (result) {
                         rangChangePie.setOption(result);
