[fix] 6月24日 晚上：让球胜平负奖金相似比赛增加让球数据筛选，更准确

--- a/templates/forecast.html
+++ b/templates/forecast.html
@@ -59,6 +59,7 @@
                         <th data-field="simple">胜平负</th>
                         <th data-field="rang">让球</th>
                         <th data-field="half">半全场</th>
+                        <th data-field="url">链接</th>
                     </tr>
                 </thead>
                 <tbody>
